name:               sakshamsharma-github-io
version:            0.2.0.0
build-type:         Simple
cabal-version:      >= 1.22.4

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
  ghc-options:      -threaded
  default-language: Haskell2010
